--- a/test_query.dbquery.ipynb
+++ b/test_query.dbquery.ipynb
@@ -33,7 +33,7 @@
      "schema": "storage"
     }
    },
-   "notebookName": "New query.dbquery.ipynb",
+   "notebookName": "test_query.dbquery.ipynb",
    "widgets": {}
   },
   "language_info": {
