--- a/test_query.dbquery.ipynb
+++ b/test_query.dbquery.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "SELECT * FROM predictive_optimization_operations_history where operation_type = \"CLUSTERING\""
+    "SELECT * FROM system.storage.predictive_optimization_operations_history where operation_type = \"CLUSTERING\""
    ]
   }
  ],
